EXE-69 | Dissapearing image bug fixed, overlapping logo fixed.

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -126,6 +126,7 @@ header {
   &.navbar {
     position: relative;
     height: auto;
+    min-height: 70px;
 
     .header-background {
       @include headerBackground;
